       for enums. (thanks to Vincent Arkesteijn)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** Space, Tab, Linefeed, Return and Page have the invalid
       secondary constituent character trait.
    ** SET-SYNTAX-FROM-CHAR correctly copies multiple-escape character
       syntax.
    ** WITH-INPUT-FROM-STRING should only update the index place on
       normal termination.

changes in sbcl-0.8.19 relative to sbcl-0.8.18:
  * new port: SBCL now works in native 64-bit mode on x86-64/Linux
    platform. The port supports 61-bit fixnums, large memory spaces
    and reloading shared object files.
  * enhancement: saving cores with foreign code loaded is now
    supported on ppc/Darwin in addition to the previously supported
    platforms.
  * enhancement: the statistical profiler now walks deeper into the 
    call stack for more meaningful call-graphs and accrued time
    reports (x86/x86-64 only). It also now reports time spent in
    foreign functions.
  * enhancement: it is now possible to trace most individual methods
    of a generic function in addition to tracing the generic function
    itself.
  * bug fix: invalid :DEFAULT-INITARGS are detected in compiled calls
    to MAKE-INSTANCE.
  * bug fix: defaulted initargs are passed to INITIALIZE-INSTANCE and
    SHARED-INITIALIZE methods from compiled calls to MAKE-INSTANCE.
  * bug fix: COERCE to (COMPLEX FLOAT) of a complex number no longer
    produces an error.  (thanks to Vincent Arkesteijn)
  * bug fix: NAMESTRING on pathnames with :WILD components in their
    directories works correctly.  (thanks to Artem V. Andreev)
  * fixed bug 125: compiler preserves identity of closures. (reported
    by Gabe Garza)
  * bug fixed: functions with &REST arguments sometimes failed with
    "Undefined function" when compiled with (DEBUG 3). (reported by
    Robert J. Macomber)
  * bug fix: overflow during compiling of setting element of a bit